edit swagmodel media
