# docs/swagger.json
@@ -846,7 +846,7 @@
                 ],
                 "description": "create an media",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -857,13 +857,22 @@
                 "summary": "create an media",
                 "parameters": [
                     {
-                        "description": "create an media",
-                        "name": "media",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/swagmodel.InputMedia"
-                        }
+                        "type": "string",
+                        "format": "string",
+                        "name": "alt",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "format": "string",
+                        "name": "caption",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "format": "binary",
+                        "name": "file",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -1626,20 +1635,6 @@
                 "body": {
                     "type": "string",
                     "example": "nice article m8!"
-                }
-            }
-        },
-        "swagmodel.InputMedia": {
-            "type": "object",
-            "properties": {
-                "alt": {
-                    "type": "string"
-                },
-                "caption": {
-                    "type": "string"
-                },
-                "url": {
-                    "type": "string"
                 }
             }
         },
